# VaultPilot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
tests/: __init__.py  test_frontmatter.py  test_note.py  test_search.py  test_vault.py
vaultpilot/: __init__.py  cli.py
vaultpilot/core/: __init__.py  frontmatter.py  git.py  graph.py  importer.py  indexer.py  note.py  search.py  stats.py  vault.py
vaultpilot/tui/: __init__.py  app.py  themes.py  widgets.py
vaultpilot/utils/: __init__.py  config.py  editor.py  output.py  path.py
